# proxify_hackathon

./: .gitignore  CSV_UPLOAD_DIRECT.md  REFINE_COSTS_API.md  REFINE_TRANSACTIONS_SUPPLIER.md  SettingTheAiApiKey.md  TEST_CSV_UPLOAD.md  polytope.yml
lib/py/couchbase-client/: README.md
lib/py/couchbase-client/src/couchbase_client/: model.py
modules/api/: README.md  polytope.yml  pyproject.toml
modules/api/src/backend/conf/: __init__.py
modules/api/src/backend/couchbase/models/: __init__.py  cost.py  costs.py  transaction.py
modules/api/src/backend/init/: __init__.py  couchbase.py
modules/api/src/backend/models/: cost.py  costs.py
modules/api/src/backend/routes/: base.py  costs.py  transactions.py
modules/api/src/backend/utils/: csv_reader.py
modules/api/tests/data/: Cillers Cost Log - Costs.csv
modules/config-manager/conf/: couchbase.yaml
modules/frontend/: package.json  vite.config.ts
modules/frontend/app/: routes.ts
modules/frontend/app/components/: import-costs-modal.tsx
modules/frontend/app/routes/: dashboard.tsx  home.tsx  transactions.tsx
